tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_65.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := ((((+ 2) * (+ y)) * ((- 1223) + (200 DIV 1223))) * (((z - y) * (x * 2)) + ((200 DIV 200) * (1 MOD 1))));
               y := ((+ ((2 - x) - (y - x))) - (((1 * 200) - (+ 0)) DIV (+ (1223 MOD 200))));
               x := ((((0 DIV 200) MOD (y MOD 0)) + ((+ z) - (+ 1223))) * (((1223 MOD 1) * (2 DIV 2)) - ((- y) MOD (200 - 1223))));
               r := ((((- 2) - (2 DIV 0)) < ((2 DIV 1223) - (1223 + 0))) OR ((+ (- 1)) = ((- 1223) MOD (x DIV 1))));
               q := ((- ((y * 0) * (- 2))) = (((0 + 200) + (1223 DIV 1)) - ((x - 0) - (0 * 1223))));
  (* error *)  p := ((((p - 1) DIV (- x)) MOD ((+ z) MOD (+ x))) <= (+ ((x DIV z) - (0 + 2))));
               q := (((- (z - y)) + ((2 + z) MOD (z + z))) = ((+ (1 + z)) * ((+ y) * (+ x))));
               y := ((((y + 200) * (z * z)) - ((1 + z) * (y DIV y))) + (+ (- (+ x))));
               x := ((((200 + x) MOD (- z)) MOD ((+ 200) MOD (x MOD 2))) DIV ((+ (x - y)) MOD (- (x * 0))));
               p := ((((- x) - (+ y)) + ((1 MOD y) + (y * x))) < (+ ((2 MOD z) DIV (z - x))))
END Test16.